# MyRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Options.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/delegate/: delegate.h
src/core/engine/: engine.cpp  engine.h
src/core/io/: file.h
src/core/log/: log.h
src/core/math/: CMakeLists.txt  aabb.h  bvh.cpp  bvh.h  math.h  transform.h
src/core/profiling/: profiler.h
src/core/time/: time.h
src/core/uid/: uid.h
src/editor/: editor_system.h  gizmo.h  inspector.h  widget.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/engine/api/: engine_api.h
src/engine/plugin/: plugin.h
src/platform/: input.h  window.cpp  window.h
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/renderer/pass/: main_pass.h  pre_pass.h
src/renderer/rdg/: dependency_graph.h  render_graph.h
src/renderer/resource/material/: material.h
src/renderer/resource/mesh/: mesh.h
src/renderer/resource/pipeline/: pipeline.cpp  pipeline.h
src/renderer/resource/shader/: shader.cpp  shader.h
src/renderer/rhi/: CMakeLists.txt  rhi.cpp  rhi.h  rhi_buffer.h  rhi_command_list.cpp  rhi_command_list.h  rhi_descriptor_set.h  rhi_descriptor_set_layout.h  rhi_enums.h  rhi_fence.h  rhi_image.h  rhi_pipeline.h  rhi_pipeline_layout.h  rhi_render_pass.h  rhi_resource_barrier.h  rhi_sampler.h  rhi_shader.h  rhi_swap_chain.h
src/renderer/rhi/vulkan/: CMakeLists.txt  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_list.cpp  vulkan_command_list.h  vulkan_common.h  vulkan_descriptor_set.cpp  vulkan_descriptor_set.h  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_frame_buffer.cpp  vulkan_frame_buffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_rhi.cpp  vulkan_rhi.h  vulkan_sampler.cpp  vulkan_sampler.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h
src/scene/: scene.h
src/scene/component/: camera.h  component.h  directional_light.h  environment.h  mesh.h  point_light.h  transform.h
src/scene/node/: node.h
src/scene/node3d/: node3d.h
src/scene/resource/: resource.h  scene_description.h  setting.h
